Refactor Word class to have charsToPositions as final field